--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -39,7 +39,7 @@
     <view class="code">
       <input type="text" name="verification" placeholder-class="input_placeholder" placeholder="请输入验证码" />
       <view catchtap="getVerificationCode" class="get_verification_code">
-        <text >获取验证码</text>
+        <text >{{getCaptchaTitle}}</text>
       </view>
       <checkbox-group bindchange="checkboxChange" name="checkboxgroup">
         <label class="checkbox" >
