--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -38,10 +38,14 @@
     </view>
     <view class="code">
       <input type="text" name="verification" placeholder-class="input_placeholder" placeholder="请输入验证码" />
+
       <view catchtap="getVerificationCode" class="get_verification_code">
         <text >{{getCaptchaTitle}}</text>
+      <!-- <view wx:if="{{verificationCode == false}}" catchtap="getVerificationCode" class="get_verification_code">
+        <text >获取验证码</text> -->
+
       </view>
-      <checkbox-group bindchange="checkboxChange" name="checkboxgroup">
+      <checkbox-group bindchange="checkboxChange" name="checkboxgroup" >
         <label class="checkbox" >
           <checkbox name="checkbox" value="true" class="wx-checkbox-input wx-checkbox-input-checked" checked="{{checked}}"/>
           <text catchtap="readPrivacyPolicy">已阅读并同意《埃森哲隐私政策》</text>
