--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -97,12 +97,18 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   right: 0;
   bottom: -37;
   top: 3rpx;
-  background: rgba(121, 72, 234, 100);
-  color: #fff;
   font-size: 28rpx;
   padding: 15rpx;
   border-radius: 16rpx;
   z-index: 100;
+}
+.register_form .code .nosend{
+  background: rgba(121, 72, 234, 100);
+  color: #fff;
+}
+.register_form .code .send{
+  color: #000;
+  background:#e6e9eb;
 }
 
 
